rwds.css
/* ... */
div.quarto-post .listing-categories .listing-category {
  color: #939bc9;
  border: solid 1px #939bc9;
  font-family: 'Oswald';
  font-weight: 400;
  font-size: .75em;
}

div.quarto-post a {
  color: black;
}

#quarto-margin-sidebar .quarto-listing-category-title {
  font-weight: 500;
  text-transform: uppercase;
  font-size: .875rem;
}

.quarto-listing-category .category {
  font-weight: 500;
  font-size: .825rem;
}

.quarto-listing-category .category.active {
  font-weight: 500;
  color: #939bc9;
}

.nav-page .nav-page-text {
  font-family: 'Oswald';
  font-weight: 500;
  text-transform: uppercase;
  color: black;
}

.nav-page .bi {
  color: black;
}


/*-- grid listing --*/

.quarto-grid-item {
  border: none;
  background-color: #f0eeeb;
}

.quarto-grid-item.borderless {
  border: none;
  background-color: #f0eeeb;
}

.quarto-grid-item div.post-contents {
  padding: 0;
}

.quarto-grid-item .card-title {
  margin-top: 0.5em;
  margin-bottom: 0.75em;
}

.quarto-grid-item .listing-categories {
  display: flex;
  flex-wrap: wrap;
  padding-bottom: .5em;
}

.quarto-grid-item .listing-categories .listing-category {
  color: #939bc9;
  border: solid 1px #939bc9 !important;
  font-family: 'Oswald';
  font-weight: 400;
  font-size: .75em;
}

.quarto-grid-item .card-attribution.justify {
  justify-content: left;
}

.quarto-grid-item .card-attribution {
  font-family: 'Oswald';
  font-weight: 300;
  color: black;
  flex-grow: 10;
  align-items: flex-end;
}

.quarto-grid-item img.thumbnail-image {
  object-fit: cover;
  height: 188px !important;
}


/*-- callout styles --*/
.callout.callout-style-default {
  background-color: white;
}


/*-- background styles --*/

.black-background {
  background-color: black;
}

.purple-background {
  background-color: #939bc9;
}

.blue-background {
  background-color: #7eadba;
}

.yellow-background {
  background-color: #e3b638;
}

.pink-background {
  background-color: #d6748c;
}

.orange-background {
  background-color: #da9359;
}


/*-- homepage styles --*/

.content-container {
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.top-story {
  max-width: 1000px;
  margin: 0 auto;
  margin-bottom: 1em; 
  box-sizing: border-box;
  height: auto;
  display: flex;
  align-items: center;
}

.top-story img {
  height: 100%;
  object-fit: cover;
}


.top-story-text {
  margin-left: 1rem;
  margin-right: 1rem;
  margin-top: 0;
}

.top-story-text h2 {
  margin-top: 1rem;
}

.top-story-text p {
  margin-bottom: 0;
}

.header-banner {
  position: relative;
  display: flex;
  justify-content: center;
}

.header-banner .header-image {
  position: absolute;
  display: none;
  height: auto;
}

.header-text p {
  text-align: center;
  margin-bottom: 0;
}

.header-block {
  max-width: 1000px;
  margin: 0 auto;
  padding-top: 1em;
  padding-bottom: 1.8em; 
  box-sizing: border-box;
  border-bottom: 1px solid black;
}

.listing-block {
  max-width: 1000px;
  margin: 0 auto;
  padding-bottom: 1.8em; 
  box-sizing: border-box;
  border-bottom: 1px solid black;
}

.listing-block h2 {
  /* margin-top: 1.5em; */
  color: black;
  text-transform: uppercase;
}

.pullout-container {
  padding-left: 1.5em;
  padding-right: 1.5em;
  padding-top: 2.5em;
}

.pullout-block {
  text-align: center;
  max-width: calc(1000px + 6vw);
  margin: 0 auto;
  padding-top: 1em;
  padding-bottom: 1.8em; 
  box-sizing: border-box;
}

.pullout-text h2 {
  text-align: center;
  margin-left: 5vw;
  margin-right: 5vw;
  color: white;
  margin-top: 0.5em;
}

.pullout-text p {
  text-align: center;
  font-family: 'Oswald';
  font-weight: 500;
  color: white;
  margin-left: 1.5em;
  margin-right: 1.5em;
  text-transform: uppercase;
  text-decoration: underline;
  text-decoration-color: #939bc9;
  text-decoration-thickness: 3px;
  margin-bottom: 1.5rem;
}

.button {
  border: none;
  border-radius: 0px;
  color: black;
  background-color: white;
  padding: 15px 32px;
  text-align: center;
  /* text-decoration: none; */
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
}

.button p {
  color: black;
  font-family: 'Oswald';
  font-size: 1.3em;
  text-transform: uppercase;
  margin-bottom: 0px;
  text-decoration: none;
}

.button a {
  color: black;
  font-weight: 500;
}


/*-- footer style --*/

.footer-container {
  padding-left: 1.5em;
  padding-right: 1.5em;
  padding-top: 1em;
  margin-top: 2.5em;
}

.footer-text h3, .h3 {
  font-family: 'Oswald';
  color: white;
  font-size: .875rem;
  font-weight: 500;
  text-transform: uppercase;
  margin-bottom: 0.5rem;
  margin-top: 0.3rem;
  border-bottom: 0;
  padding-bottom: 0;
  padding-top: 0px;
}

.footer-text p, .p {
  color: white;
  font-size: .875rem;
  font-weight: 400;
}

.footer-text p > a {
  color: white;
  font-size: .875rem;
  font-weight: 400;
}

.footer-text p > a:hover {
  color: #939bc9;
  font-size: .875rem;
  font-weight: 400;
}

.footer-block {
  max-width: 1000px;
  margin: 0 auto;
  padding-top: 1em;
  padding-bottom: 1.8em; 
  box-sizing: border-box;
}


/*-- nav footer styles --*/

.nav-footer {
  color: white;
  font-family: 'Oswald';
  font-weight: 400;
  padding-left: 1.5em !important;
  padding-right: 1.5em !important;
}

body:not(.floating) .nav-footer {
  border-top: 1px solid #f0eeeb;
}

.nav-footer a {
  color: white;
  /* text-decoration: none; */
}

.nav-footer a:hover {
  color: #939bc9;
  /* text-decoration: none; */
}

.nav-footer-left .footer-items .nav-link, .nav-footer-center .footer-items .nav-link, .nav-footer-right .footer-items .nav-link {
  font-weight: 400;
  text-transform: uppercase;
}

.nav-footer-left .footer-items .nav-item, .nav-footer-center .footer-items .nav-item, .nav-footer-right .footer-items .nav-item {
  margin-top: 0;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.nav-footer-left {
  font-family: 'Montserrat';
}

.nav-footer-right {
  font-family: 'Montserrat';
}
/* ... */

